--- a/result/2021-12-18.md
+++ b/result/2021-12-18.md
@@ -57,7 +57,9 @@
 57. [山东夫妇捡脑瘫弃婴一养32年](https://s.weibo.com//weibo?q=%23%E5%B1%B1%E4%B8%9C%E5%A4%AB%E5%A6%87%E6%8D%A1%E8%84%91%E7%98%AB%E5%BC%83%E5%A9%B4%E4%B8%80%E5%85%BB32%E5%B9%B4%23&Refer=top) 138122
 58. [全国12个高风险59个中风险地区](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD12%E4%B8%AA%E9%AB%98%E9%A3%8E%E9%99%A959%E4%B8%AA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 135982
 59. [孝义盗采煤矿透水事故首名被困者升井](https://s.weibo.com//weibo?q=%23%E5%AD%9D%E4%B9%89%E7%9B%97%E9%87%87%E7%85%A4%E7%9F%BF%E9%80%8F%E6%B0%B4%E4%BA%8B%E6%95%85%E9%A6%96%E5%90%8D%E8%A2%AB%E5%9B%B0%E8%80%85%E5%8D%87%E4%BA%95%23&Refer=top) 132121
-60. [立陶宛安排驻华外交人员不辞而别](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%AE%89%E6%8E%92%E9%A9%BB%E5%8D%8E%E5%A4%96%E4%BA%A4%E4%BA%BA%E5%91%98%E4%B8%8D%E8%BE%9E%E8%80%8C%E5%88%AB%23&Refer=top) 124313
+60. [立陶宛安排驻华外交人员不辞而别](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%AE%89%E6%8E%92%E9%A9%BB%E5%8D%8E%E5%A4%96%E4%BA%A4%E4%BA%BA%E5%91%98%E4%B8%8D%E8%BE%9E%E8%80%8C%E5%88%AB%23&Refer=top) 129759
 61. [身高1米村医守护全村2000人健康](https://s.weibo.com//weibo?q=%23%E8%BA%AB%E9%AB%981%E7%B1%B3%E6%9D%91%E5%8C%BB%E5%AE%88%E6%8A%A4%E5%85%A8%E6%9D%912000%E4%BA%BA%E5%81%A5%E5%BA%B7%23&Refer=top) 85765
 62. [2022记得给这些打钩](https://s.weibo.com//weibo?q=%232022%E8%AE%B0%E5%BE%97%E7%BB%99%E8%BF%99%E4%BA%9B%E6%89%93%E9%92%A9%23&Refer=top) 55492
 63. [2021只剩下最后15天](https://s.weibo.com//weibo?q=%232021%E5%8F%AA%E5%89%A9%E4%B8%8B%E6%9C%80%E5%90%8E15%E5%A4%A9%23&Refer=top) 30904
+64. [茶颜悦色就工资问题道歉](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%B0%B1%E5%B7%A5%E8%B5%84%E9%97%AE%E9%A2%98%E9%81%93%E6%AD%89%23&Refer=top) 23470
+65. [茶颜悦色员工吐槽月薪不超3000元](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%91%98%E5%B7%A5%E5%90%90%E6%A7%BD%E6%9C%88%E8%96%AA%E4%B8%8D%E8%B6%853000%E5%85%83%23&Refer=top) 22554
