--- a/result/2021-12-18.md
+++ b/result/2021-12-18.md
@@ -60,9 +60,10 @@
 60. [立陶宛安排驻华外交人员不辞而别](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%AE%89%E6%8E%92%E9%A9%BB%E5%8D%8E%E5%A4%96%E4%BA%A4%E4%BA%BA%E5%91%98%E4%B8%8D%E8%BE%9E%E8%80%8C%E5%88%AB%23&Refer=top) 129759
 61. [身高1米村医守护全村2000人健康](https://s.weibo.com//weibo?q=%23%E8%BA%AB%E9%AB%981%E7%B1%B3%E6%9D%91%E5%8C%BB%E5%AE%88%E6%8A%A4%E5%85%A8%E6%9D%912000%E4%BA%BA%E5%81%A5%E5%BA%B7%23&Refer=top) 85765
 62. [2022记得给这些打钩](https://s.weibo.com//weibo?q=%232022%E8%AE%B0%E5%BE%97%E7%BB%99%E8%BF%99%E4%BA%9B%E6%89%93%E9%92%A9%23&Refer=top) 55492
-63. [假如职场角色都在一个群](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E8%81%8C%E5%9C%BA%E8%A7%92%E8%89%B2%E9%83%BD%E5%9C%A8%E4%B8%80%E4%B8%AA%E7%BE%A4&Refer=top) 47875
+63. [假如职场角色都在一个群](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E8%81%8C%E5%9C%BA%E8%A7%92%E8%89%B2%E9%83%BD%E5%9C%A8%E4%B8%80%E4%B8%AA%E7%BE%A4&Refer=top) 48453
 64. [2021只剩下最后15天](https://s.weibo.com//weibo?q=%232021%E5%8F%AA%E5%89%A9%E4%B8%8B%E6%9C%80%E5%90%8E15%E5%A4%A9%23&Refer=top) 30904
 65. [茶颜悦色就工资问题道歉](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%B0%B1%E5%B7%A5%E8%B5%84%E9%97%AE%E9%A2%98%E9%81%93%E6%AD%89%23&Refer=top) 23470
 66. [茶颜悦色员工吐槽月薪不超3000元](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%91%98%E5%B7%A5%E5%90%90%E6%A7%BD%E6%9C%88%E8%96%AA%E4%B8%8D%E8%B6%853000%E5%85%83%23&Refer=top) 22554
 67. [青春环游记](https://s.weibo.com//weibo?q=%E9%9D%92%E6%98%A5%E7%8E%AF%E6%B8%B8%E8%AE%B0&Refer=top) 21699
-68. [如何更好地与老年人相处](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E6%9B%B4%E5%A5%BD%E5%9C%B0%E4%B8%8E%E8%80%81%E5%B9%B4%E4%BA%BA%E7%9B%B8%E5%A4%84%23&Refer=top) 13578
+68. [被问是否应为美新冠死亡人数破80万负责](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%97%AE%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E7%BE%8E%E6%96%B0%E5%86%A0%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%A0%B480%E4%B8%87%E8%B4%9F%E8%B4%A3%23&Refer=top) 18006
+69. [如何更好地与老年人相处](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E6%9B%B4%E5%A5%BD%E5%9C%B0%E4%B8%8E%E8%80%81%E5%B9%B4%E4%BA%BA%E7%9B%B8%E5%A4%84%23&Refer=top) 15584
