--- a/result/2021-12-18.md
+++ b/result/2021-12-18.md
@@ -58,14 +58,15 @@
 58. [全国12个高风险59个中风险地区](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD12%E4%B8%AA%E9%AB%98%E9%A3%8E%E9%99%A959%E4%B8%AA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 135982
 59. [孝义盗采煤矿透水事故首名被困者升井](https://s.weibo.com//weibo?q=%23%E5%AD%9D%E4%B9%89%E7%9B%97%E9%87%87%E7%85%A4%E7%9F%BF%E9%80%8F%E6%B0%B4%E4%BA%8B%E6%95%85%E9%A6%96%E5%90%8D%E8%A2%AB%E5%9B%B0%E8%80%85%E5%8D%87%E4%BA%95%23&Refer=top) 132121
 60. [立陶宛安排驻华外交人员不辞而别](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%AE%89%E6%8E%92%E9%A9%BB%E5%8D%8E%E5%A4%96%E4%BA%A4%E4%BA%BA%E5%91%98%E4%B8%8D%E8%BE%9E%E8%80%8C%E5%88%AB%23&Refer=top) 129759
-61. [身高1米村医守护全村2000人健康](https://s.weibo.com//weibo?q=%23%E8%BA%AB%E9%AB%981%E7%B1%B3%E6%9D%91%E5%8C%BB%E5%AE%88%E6%8A%A4%E5%85%A8%E6%9D%912000%E4%BA%BA%E5%81%A5%E5%BA%B7%23&Refer=top) 85765
-62. [被问是否应为美新冠死亡人数破80万负责](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%97%AE%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E7%BE%8E%E6%96%B0%E5%86%A0%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%A0%B480%E4%B8%87%E8%B4%9F%E8%B4%A3%23&Refer=top) 83539
-63. [迷你蛋挞披萨](https://s.weibo.com//weibo?q=%E8%BF%B7%E4%BD%A0%E8%9B%8B%E6%8C%9E%E6%8A%AB%E8%90%A8&Refer=top) 75419
-64. [玲娜贝儿新品有人转手卖出3500元](https://s.weibo.com//weibo?q=%23%E7%8E%B2%E5%A8%9C%E8%B4%9D%E5%84%BF%E6%96%B0%E5%93%81%E6%9C%89%E4%BA%BA%E8%BD%AC%E6%89%8B%E5%8D%96%E5%87%BA3500%E5%85%83%23&Refer=top) 55891
-65. [2022记得给这些打钩](https://s.weibo.com//weibo?q=%232022%E8%AE%B0%E5%BE%97%E7%BB%99%E8%BF%99%E4%BA%9B%E6%89%93%E9%92%A9%23&Refer=top) 55492
-66. [假如职场角色都在一个群](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E8%81%8C%E5%9C%BA%E8%A7%92%E8%89%B2%E9%83%BD%E5%9C%A8%E4%B8%80%E4%B8%AA%E7%BE%A4&Refer=top) 48882
-67. [2021只剩下最后15天](https://s.weibo.com//weibo?q=%232021%E5%8F%AA%E5%89%A9%E4%B8%8B%E6%9C%80%E5%90%8E15%E5%A4%A9%23&Refer=top) 30904
-68. [茶颜悦色就工资问题道歉](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%B0%B1%E5%B7%A5%E8%B5%84%E9%97%AE%E9%A2%98%E9%81%93%E6%AD%89%23&Refer=top) 23470
-69. [青春环游记](https://s.weibo.com//weibo?q=%E9%9D%92%E6%98%A5%E7%8E%AF%E6%B8%B8%E8%AE%B0&Refer=top) 22635
-70. [茶颜悦色员工吐槽月薪不超3000元](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%91%98%E5%B7%A5%E5%90%90%E6%A7%BD%E6%9C%88%E8%96%AA%E4%B8%8D%E8%B6%853000%E5%85%83%23&Refer=top) 22554
-71. [如何更好地与老年人相处](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E6%9B%B4%E5%A5%BD%E5%9C%B0%E4%B8%8E%E8%80%81%E5%B9%B4%E4%BA%BA%E7%9B%B8%E5%A4%84%23&Refer=top) 17283
+61. [被问是否应为美新冠死亡人数破80万负责](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%97%AE%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E7%BE%8E%E6%96%B0%E5%86%A0%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%A0%B480%E4%B8%87%E8%B4%9F%E8%B4%A3%23&Refer=top) 98196
+62. [迷你蛋挞披萨](https://s.weibo.com//weibo?q=%E8%BF%B7%E4%BD%A0%E8%9B%8B%E6%8C%9E%E6%8A%AB%E8%90%A8&Refer=top) 89851
+63. [身高1米村医守护全村2000人健康](https://s.weibo.com//weibo?q=%23%E8%BA%AB%E9%AB%981%E7%B1%B3%E6%9D%91%E5%8C%BB%E5%AE%88%E6%8A%A4%E5%85%A8%E6%9D%912000%E4%BA%BA%E5%81%A5%E5%BA%B7%23&Refer=top) 85765
+64. [玲娜贝儿新品有人转手卖出3500元](https://s.weibo.com//weibo?q=%23%E7%8E%B2%E5%A8%9C%E8%B4%9D%E5%84%BF%E6%96%B0%E5%93%81%E6%9C%89%E4%BA%BA%E8%BD%AC%E6%89%8B%E5%8D%96%E5%87%BA3500%E5%85%83%23&Refer=top) 67951
+65. [误杀1原版续集讲的什么](https://s.weibo.com//weibo?q=%23%E8%AF%AF%E6%9D%801%E5%8E%9F%E7%89%88%E7%BB%AD%E9%9B%86%E8%AE%B2%E7%9A%84%E4%BB%80%E4%B9%88%23&Refer=top) 63351
+66. [2022记得给这些打钩](https://s.weibo.com//weibo?q=%232022%E8%AE%B0%E5%BE%97%E7%BB%99%E8%BF%99%E4%BA%9B%E6%89%93%E9%92%A9%23&Refer=top) 55492
+67. [假如职场角色都在一个群](https://s.weibo.com//weibo?q=%E5%81%87%E5%A6%82%E8%81%8C%E5%9C%BA%E8%A7%92%E8%89%B2%E9%83%BD%E5%9C%A8%E4%B8%80%E4%B8%AA%E7%BE%A4&Refer=top) 48882
+68. [2021只剩下最后15天](https://s.weibo.com//weibo?q=%232021%E5%8F%AA%E5%89%A9%E4%B8%8B%E6%9C%80%E5%90%8E15%E5%A4%A9%23&Refer=top) 30904
+69. [茶颜悦色就工资问题道歉](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%B0%B1%E5%B7%A5%E8%B5%84%E9%97%AE%E9%A2%98%E9%81%93%E6%AD%89%23&Refer=top) 23470
+70. [青春环游记](https://s.weibo.com//weibo?q=%E9%9D%92%E6%98%A5%E7%8E%AF%E6%B8%B8%E8%AE%B0&Refer=top) 23207
+71. [茶颜悦色员工吐槽月薪不超3000元](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%91%98%E5%B7%A5%E5%90%90%E6%A7%BD%E6%9C%88%E8%96%AA%E4%B8%8D%E8%B6%853000%E5%85%83%23&Refer=top) 22554
+72. [如何更好地与老年人相处](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E6%9B%B4%E5%A5%BD%E5%9C%B0%E4%B8%8E%E8%80%81%E5%B9%B4%E4%BA%BA%E7%9B%B8%E5%A4%84%23&Refer=top) 17283
